Ganti warna text tombol cari

--- a/css/main.css
+++ b/css/main.css
@@ -21,7 +21,7 @@ body {
     display: inline-block;
     padding: 20px;
     background-color: chartreuse;
-    color: whitesmoke;
+    color: midnightblue;
     font-size: 16px;
     border: 1px solid chartreuse;
     border-radius: 5px;
